discussion/kv_engine/181838/181838_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46890: Remove memcached caching of audit event states

It won't work when there will be per-bucket configured events

Change-Id: Ib304fb3d73e9c2fa14479e5172c6c524bfc8bc7a

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-10-27 11:58:22.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-10-27 12:27:27.000000000
Message: 
Patch Set 9: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32003/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32003/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23007/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23007/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24818/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/24818/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21544/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:43:9: error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
        event_filter.withWLock([](auto& filter) {
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:44:40: error: no member named "create" in "AuditEventFilter" [clang-diagnostic-error]
            filter = AuditEventFilter::create(++generation, {});
                                       ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21544/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/audit.cc:43:9:
error: use of undeclared identifier "event_filter" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21544/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50767/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/auditd/src/audit.cc(43): error C2065: "event_filter": undeclared identifier ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/50767/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42610/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/audit.cc:43:9:
error: use of undeclared identifier "event_filter"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42610/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23987/ : FAILURE

Compile error at [2022-10-27T12:20:39.726Z] ../kv_engine/auditd/src/audit.cc:43:9:
error: ?event_filter? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/23987/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23578/ : FAILURE

Compile error at [2022-10-27T12:23:32.451Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/auditd/src/audit.cc:43:9:
error: ?event_filter? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23578/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/277/ : FAILURE

Compile error at [2022-10-27T12:20:27.505Z] /home/couchbase/jenkins/workspace/kv_engine.linux-debug_master/kv_engine/auditd/src/audit.cc:43:9:
error: ?event_filter? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/277/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11365/ : FAILURE

Compile error at [2022-10-27T12:06:08.998Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/auditd/src/audit.cc:43:9:
error: ?event_filter? was not declared in this scope
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11365/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11274/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11274/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/20816/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
